# c-multihash

./: CMakeLists.txt
src/: main.c
tests/c/: examples.h  test_multihash_new.c
